src/ui/styles.css
/* ... */
.core-card-status {
  @apply ml-2 mr-2 mb-2 mt-2 col-span-12 md:col-span-6 2xl:col-span-3 3xl:col-span-2 w-fit h-fit transition hover:scale-102 p-4 relative min-w-0 break-words dark:brightness-110 bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border;
}

.core-card-status-container {
  @apply mx-1 flex justify-start items-center;
}

.core-card-status-title {
  @apply mb-0 font-bold dark:text-white/90 mr-4;
}

.core-card-status-svg {
  @apply w-6 h-6;
}

.info.core-card-status-svg {
  @apply fill-sky-500;
}

.error.core-card-status-svg {
  @apply fill-red-500;
}

.success.core-card-status-svg {
  @apply fill-green-500;
}

.core-layout-separator {
  @apply col-span-12;
}

.core-card-list {
  @apply ml-2 mr-2 mb-2 mt-2 h-fit content-start md:col-span-6 overflow-hidden grid grid-cols-12 max-h-100 sm:max-h-125 col-span-12 p-4 relative break-words dark:brightness-110 bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border;
}

.w-small.core-card-list {
  @apply md:max-w-[300px];
}

.w-medium.core-card-list {
  @apply md:max-w-[400px];
}

.w-large.core-card-list {
  @apply md:max-w-[550px];
}

.core-card-list-title-container {
  @apply col-span-12 flex;
}

.core-card-list-title {
  @apply mb-4 mt-2 font-bold dark:text-white/90 mx-2;
}

.core-card-list-container {
  @apply col-span-12 overflow-y-auto overflow-x-auto;
}

.core-card-list-header {
  @apply dark:text-gray-200 h-8 text-sm font-bold m-0 pb-2 border-b border-gray-400;
}

.core-card-list-item {
  @apply items-center grid grid-cols-12 border-b border-gray-300 py-2.5;
}

.core-card-list-item-content {
  @apply dark:text-gray-400 text-sm m-0 my-1;
}

.core-card-list-wrap {
  @apply w-full grid grid-cols-12 rounded p-2;
}

.w-small.core-card-list-wrap {
  @apply min-w-[200px];
}

.w-medium.core-card-list-wrap {
  @apply min-w-[300px];
}

.w-large.core-card-list-wrap {
  @apply min-w-[450px];
}

.core-card-metrics {
  @apply ml-2 mr-2 mb-2 mt-2 h-fit sm:max-h-28 hover:scale-102 transition col-span-12 md:col-span-6 2xl:col-span-4 flex p-4 justify-between break-words dark:brightness-110 bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border;
}

.core-card-metrics-name {
  @apply mb-2 font-sans text-sm font-semibold leading-normal uppercase dark:text-gray-400;
}

.core-card-metrics-subtitle {
  @apply mb-0 dark:text-gray-300;
}

.core-card-metrics-subtitle-content {
  @apply font-bold leading-normal text-sm mx-0.5;
}

.error.core-card-metrics-subtitle-content {
  @apply text-red-500;
}

.success.core-card-metrics-subtitle-content {
  @apply text-green-500;
}

.warning.core-card-metrics-subtitle-content {
  @apply text-yellow-500;
}

.info.core-card-metrics-subtitle-content {
  @apply text-sky-500;
}

.core-card-metrics-svg {
  @apply leading-none text-lg relative fill-white;
}

.size-small.core-card-metrics-svg {
  @apply scale-[0.5];
}

.size-medium.core-card-metrics-svg {
  @apply scale-[0.6];
}

.size-base.core-card-metrics-svg {
  @apply scale-[0.75];
}

.purple.core-card-svg-container {
  @apply bg-purple-600;
}

.green.core-card-svg-container {
  @apply bg-green-700;
}

.red.core-card-svg-container {
  @apply bg-red-700;
}

.orange.core-card-svg-container {
  @apply bg-orange-600;
}

.blue.core-card-svg-container {
  @apply bg-blue-600;
}

.yellow.core-card-svg-container {
  @apply bg-yellow-600;
}

.gray.core-card-svg-container {
  @apply bg-gray-600;
}

.dark.core-card-svg-container {
  @apply bg-slate-600;
}

.amber.core-card-svg-container {
  @apply bg-amber-600;
}

.emerald.core-card-svg-container {
  @apply bg-emerald-600;
}

.teal.core-card-svg-container {
  @apply bg-teal-600;
}

.indigo.core-card-svg-container {
  @apply bg-indigo-600;
}

.cyan.core-card-svg-container {
  @apply bg-cyan-600;
}

.sky.core-card-svg-container {
  @apply bg-sky-700;
}

.pink.core-card-svg-container {
  @apply bg-pink-600;
}

.lime.core-card-svg-container {
  @apply bg-lime-600;
}

.core-separator {
  @apply h-px mx-0 mt-3 mb-2 bg-transparent bg-gradient-to-r from-transparent via-black/40 to-transparent dark:bg-gradient-to-r dark:from-transparent dark:via-white dark:to-transparent;
}

.core-card-test-container {
  @apply flex justify-center mt-4;
}

.core-card-test-btn {
  @apply text-sm tracking-wide dark:brightness-90 inline-block px-6 py-3 font-bold text-center text-white uppercase align-middle transition-all rounded-lg cursor-pointer bg-yellow-500 hover:bg-yellow-500/80 focus:bg-yellow-500/80 leading-normal ease-in shadow-xs hover:-translate-y-px active:opacity-85 hover:shadow-md disabled:cursor-not-allowed dark:disabled:text-gray-300 disabled:text-gray-700 disabled:bg-gray-400 disabled:border-gray-400/0 dark:disabled:bg-gray-700 dark:disabled:border-gray-700/0 disabled:hover:translate-y-0 disabled:hover:bg-gray-400 disabled:hover:border-gray-400/0 dark:disabled:hover:translate-y-0 dark:disabled:hover:bg-gray-700 dark:disabled:hover:border-gray-700/0;
}

.core-card-test-status-container {
  @apply mx-1 flex justify-center items-center;
}

.core-card-test-status-svg {
  @apply w-6 h-6 mr-2;
}

.success.core-card-test-status-svg {
  @apply fill-green-500;
}

.error.core-card-test-status-svg {
  @apply fill-red-500;
}

.info.core-card-test-status-svg {
  @apply fill-sky-500;
}

.core-img-default {
  @apply h-12 w-12 mr-4;
}

.core-img-hor {
  @apply h-16 w-24 mr-4;
}
/* ... */

